AFMA - Update 6 (from Ain)
Update notebook

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/project_final-checkpoint.ipynb
 test.ipynb
 project_final_test.ipynb
+.ipynb_checkpoints/project_final-checkpoint.ipynb
